# auto_enums

./: .deny.toml  .external-types.toml  .git-blame-ignore-revs  .travis.yml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  azure-pipelines.yml  bors.toml  build.rs  ci.sh  clippy.toml  compiletest.sh
.github/: bors.toml  dependabot.yml  zizmor.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
bench/: Cargo.toml  vs_boxed.rs
benches/: vs_boxed.rs
ci/: azure-clippy.yml  azure-compile-test.yml  azure-compiletest.yml  azure-rustdoc.yml  azure-test.yml  create-release.sh  publish.sh
core/: Cargo.toml
core/src/: lib.rs  utils.rs
core/src/attribute/: attrs.rs  builder.rs  expr.rs  mod.rs  params.rs  traits.rs  visitor.rs
core/src/auto_enum/: args.rs  attrs.rs  context.rs  expr.rs  mod.rs  traits.rs  type_analysis.rs  visitor.rs
core/src/utils/: attrs.rs  error.rs  mod.rs  rand.rs
derive/: Cargo.toml  build.rs
derive/src/: enum_derive.rs  lib.rs  utils.rs
derive/src/attribute/: args.rs  mod.rs
derive/src/derive/: mod.rs
derive/src/derive/core/: convert.rs  fmt.rs  future.rs  iter.rs  mod.rs  ops.rs
derive/src/derive/core/convert/: as_mut.rs  as_ref.rs  mod.rs
derive/src/derive/core/fmt/: mod.rs  write.rs
derive/src/derive/core/iter/: double_ended_iterator.rs  exact_size_iterator.rs  extend.rs  fused_iterator.rs  iterator.rs  mod.rs  trusted_len.rs
derive/src/derive/core/ops/: deref.rs  deref_mut.rs  fn_.rs  fn_mut.rs  fn_once.rs  generator.rs  index.rs  index_mut.rs  mod.rs  range_bounds.rs
derive/src/derive/std/: error.rs  future.rs  io.rs  mod.rs
derive/src/derive/std/convert/: as_mut.rs  as_ref.rs
derive/src/derive/std/fmt/: mod.rs  write.rs
derive/src/derive/std/io/: buf_read.rs  mod.rs  read.rs  seek.rs  write.rs
derive/src/derive/std/iter/: double_ended_iterator.rs  exact_size_iterator.rs  extend.rs  fused_iterator.rs  iterator.rs  mod.rs  trusted_len.rs
derive/src/derive/std/ops/: deref.rs  deref_mut.rs  fn_.rs  fn_mut.rs  fn_once.rs  generator.rs  index.rs  index_mut.rs  mod.rs  range_bounds.rs
derive/src/derive/ty_impls/: transpose.rs
derive/src/enum_derive/: args.rs  mod.rs
derive/src/utils/: error.rs  mod.rs  parse.rs
docs/: example-1.md
docs/supported_traits/std/: debug.md  error.md  future.md
docs/supported_traits/std/io/: BufRead.md  read.md  seek.md  write.md
docs/supported_traits/std/iter/: DoubleEndedIterator.md  ExactSizeIterator.md  FusedIterator.md  TrustedLen.md  double_ended_iterator.md  exact_size_iterator.md  extend.md  fused_iterator.md  iterator.md  trusted_len.md
generated_codes/: example-1.md  example-3.md  examples-2.md  examples-3.md
scripts/: check-minimal-versions.sh  ci.sh  publish.sh
src/: enum_derive.rs  error.rs  lib.rs  utils.rs
src/auto_enum/: context.rs  expr.rs  mod.rs  type_analysis.rs  visitor.rs
src/derive/: mod.rs  utils.rs
src/derive/core/: convert.rs  fmt.rs  future.rs  iter.rs  mod.rs  ops.rs
src/derive/std/: error.rs  io.rs  mod.rs
src/derive/ty_impls/: mod.rs  transpose.rs
test_suite/: Cargo.toml
test_suite/benches/: vs_boxed.rs
test_suite/compile-test/: Cargo.toml
test_suite/compile-test/tests/: compile-test.rs
test_suite/compile-test/tests/ui/: update-references.sh
test_suite/compile-test/tests/ui/auto_enum/: compile-fail.rs
test_suite/compile-test/tests/ui/enum_derive/: args.stderr  variant.rs  variant.stderr
test_suite/tests/: compile-test.rs  external_libraries.rs  test_auto_enum.rs  test_enum_derive.rs
test_suite/tests/ui/auto_enum/: compile-fail.stderr
test_suite/tests/ui/enum_derive/: args.rs  ty_impls.rs  ty_impls.stderr  variant.rs  variant.stderr
test_suite/tests_2018/: Cargo.toml
test_suite/tests_2018/tests/: test.rs
test_suite/tests_unstable/: Cargo.toml
test_suite/tests_unstable/tests/: test.rs
test_suite/unstable/: Cargo.toml
test_suite/unstable/tests/: external_libraries.rs  test.rs
tests/: README.md  auto_enum.rs  auto_enum_if_attr.rs.in  auto_enum_if_attr_unstable.rs.in  compile-test.rs  compiletest.rs  enum_derive.rs  enum_derive_duplicate_versions.rs  expandtest.rs  nested.rs  type_analysis.rs
tests/doc/: Cargo.toml  lib.rs
tests/expand/: README.md
tests/expand/enum_derive/: example-1.expanded.rs  example-1.rs
tests/expand/std/: debug.expanded.rs  debug.rs  error.expanded.rs  error.rs  future.expanded.rs  future.rs
tests/expand/std/io/: buf_read.expanded.rs  buf_read.rs  read.expanded.rs  read.rs  seek.expanded.rs  seek.rs  write.expanded.rs  write.rs
tests/expand/std/iter/: double_ended_iterator.expanded.rs  double_ended_iterator.rs  exact_size_iterator.expanded.rs  exact_size_iterator.rs  extend.expanded.rs  extend.rs  fused_iterator.expanded.rs  fused_iterator.rs  iterator.expanded.rs  iterator.rs  trusted_len.expanded.rs  trusted_len.rs
tests/run-pass/: futures01.rs  futures03.rs  rayon.rs  serde.rs  tokio01.rs  tokio03.rs  tokio1.rs
tests/run-pass/auto_enum/: unstable.rs
tests/run-pass/enum_derive/: http_body1.rs  tokio02.rs  tokio03.rs  unstable.rs
tests/ui/auto_enum/: args.rs  args.stderr  attribute.rs  attribute.stderr  compile-fail.rs  compile-fail.stderr  def_site.rs  def_site.stderr  invalid_break.rs  invalid_break.stderr  marker.rs  marker.stderr  nested.rs  nested.stderr  non-stmt-expr.rs  non-stmt-expr.stderr  rejected-by-rustc.rs  rejected-by-rustc.stderr
tests/ui/enum_derive/: args.rs  args.stderr  ty_impls.rs  ty_impls.stderr  unpin.rs  unpin.stderr  variant.rs  variant.stderr
tests/ui/run-pass/: futures01.rs  futures03.rs  tokio01.rs  tokio02.rs
tools/: publish.sh  tidy.sh
