[package]
name = "bench"
edition = "2021"

[dev-dependencies]
auto_enums = { path = ".." }

criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", rev = "8617cd7" } # reduce deps
fastrand = "2"

[[bench]]
name = "vs_boxed"
path = "vs_boxed.rs"
harness = false

[lints]
workspace = true
