[package]
name = "auto_enums_core"
version = "0.7.10"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/auto_enums"
documentation = "https://docs.rs/auto_enums_core"
keywords = ["enum", "macros", "derive", "attribute"]
categories = ["rust-patterns"]
description = """
An internal crate to support auto_enums - do not use directly
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[features]
# Default features.
default = []

# Analyze return type of function and `let` binding.
type_analysis = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "visit-mut"] }
