[package]
name = "auto_enums_derive"
version = "0.7.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/taiki-e/auto_enums"
documentation = "https://docs.rs/auto_enums_derive"
keywords = ["enum", "macros", "derive", "attribute"]
categories = ["rust-patterns"]
description = """
An internal crate to support auto_enums - do not use directly
"""

[lib]
proc-macro = true

[features]
# Default features.
default = ["std"]

# Enable to use `transpose*` methods.
transpose_methods = []

# ==============================================================================
# [std|core] libraries

# Enable to use `std` library's traits.
std = []

# Enable to use `[std|core]::ops`'s `Deref`, `DerefMut`, `Index`, `IndexMut`, and `RangeBounds` traits.
ops = []

# Enable to use `[std|core]::convert`'s `AsRef` and `AsMut` traits.
convert = []

# Enable to use `[std|core]::fmt`'s traits other than `Debug`, `Display` and `Write`
fmt = []

# ==============================================================================
# external libraries

# futures(v0.1)
futures01 = []

# rayon
rayon = []

# serde
serde = []

# ==============================================================================
# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = []

# external libraries

# futures(v0.3+)
futures = []

# Enable unstable features of [std|core] libraries

# Enable to use `[std|core]::ops::Generator` trait.
generator_trait = []
# Enable to use `Fn`, `FnMut`, and `FnOnce` traits.
fn_traits = []
# Enable to use `[std|core]::iter::TrustedLen` trait.
trusted_len = []

[dependencies]
derive_utils = { version = "0.9.1" }
lazy_static = "1.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
