[package]
name = "auto_enums_derive"
version = "0.7.9"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/auto_enums"
homepage = "https://github.com/taiki-e/auto_enums"
documentation = "https://docs.rs/auto_enums_derive"
keywords = ["enum", "macros", "derive", "attribute"]
categories = ["rust-patterns"]
description = """
An internal crate to support auto_enums - do not use directly
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[features]
# Default features.
default = ["std"]

# Enable to use `transpose*` methods.
transpose_methods = []

# ==============================================================================
# [std|core] libraries

# Enable to use `std` library's traits.
std = []
# Enable to use `[std|core]::ops`'s `Deref`, `DerefMut`, `Index`, `IndexMut`, and `RangeBounds` traits.
ops = []
# Enable to use `[std|core]::convert`'s `AsRef` and `AsMut` traits.
convert = []
# Enable to use `[std|core]::fmt`'s traits other than `Debug`, `Display` and `Write`
fmt = []

# ==============================================================================
# external libraries

# https://docs.rs/futures/0.3
futures03 = []
# https://docs.rs/futures/0.1
futures01 = []
# TODO: remove this in favor of futures03.
futures = ["futures03"]
# https://docs.rs/rayon/1
rayon = []
# https://docs.rs/serde/1
serde = []
# https://docs.rs/tokio/0.3
tokio03 = []
# https://docs.rs/tokio/0.2
tokio02 = []
# https://docs.rs/tokio/0.1
tokio01 = []

# ==============================================================================
# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = []

# Enable unstable features of [std|core] libraries

# Enable to use `[std|core]::ops::Generator` trait.
generator_trait = []
# Enable to use `Fn`, `FnMut`, and `FnOnce` traits.
fn_traits = []
# Enable to use `[std|core]::iter::TrustedLen` trait.
trusted_len = []

[build-dependencies]
autocfg = "1"

[dependencies]
derive_utils = { version = "0.11" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
