[package]
name = "test-suite"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dependencies]

[dev-dependencies]
auto_enums = { path = "..", default-features = false }
futures-preview = "0.3.0-alpha.18"
rand = "0.7" # for benches
rayon = "1.1"
serde = "1.0"

[features]
default = ["external_libraries"]

type_analysis = ["auto_enums/type_analysis"]

external_libraries = [
    "auto_enums/std",
    "auto_enums/futures",
    "auto_enums/rayon",
    "auto_enums/serde",
]

unstable = [
    "auto_enums/read_initializer",
    "auto_enums/exact_size_is_empty",
    "auto_enums/try_trait",
]
