[package]
name = "test-suite"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dependencies]

[dev-dependencies]
auto_enums = { path = "..", default-features = false, features = ["std", "rayon", "serde"] }
futures-preview = "0.3.0-alpha.18"
rand = "0.7" # for benches
rayon = "1.2"
serde = "1.0"

[features]
unstable = [
    "auto_enums/unstable",
    "auto_enums/futures",
    "auto_enums/try_trait",
    "auto_enums/exact_size_is_empty",
    "auto_enums/read_initializer",
]
