[package]
name = "auto_enums_ui_tests"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dev-dependencies]
auto_enums = { path = "../..", default-features = false, features = ["std"] }
compiletest = { version = "0.3.21", package = "compiletest_rs", features = ["stable", "tmp"] }

[features]
unstable = [
    "auto_enums/type_analysis",
    "auto_enums/transpose_methods",
    "auto_enums/try_trait",
]
