[package]
name = "auto_enumerate_tests_2018"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[workspace]

[dependencies]
futures-preview = { version = "0.3.0-alpha.10", optional = true }

[dev-dependencies.auto_enumerate]
path = "../.."
default-features = false
features = ["std"]

[features]
unstable = [
    "futures-preview",
    "auto_enumerate/unstable",
    "auto_enumerate/futures",
    "auto_enumerate/read_initializer",
    "auto_enumerate/exact_size_is_empty",
    "auto_enumerate/try_trait",
    "auto_enumerate/unsized_locals",
]
