[package]
name = "auto_enums_test_unstable"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dependencies]

[dev-dependencies]
auto_enums = { path = "../..", default-features = false, features = ["std", "futures"] }
futures-preview = "0.3.0-alpha.18"
